Add new JS file and update HTML/JS for Preloader

--- a/index.html
+++ b/index.html
@@ -15,48 +15,51 @@
         <span class="index"></span>
     </div>
 
-    <!-- Navbar -->
-    <header class="navbar">
-        <div class="n">
-            <div class="dots">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+    <div class="main-content" style="display: none;">
+        <!-- Navbar -->
+        <header class="navbar">
+            <div class="n">
+                <div class="dots">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <a href="home.html" target="_blank" class="logo">Forsa Plus</a>
             </div>
-            <a href="home.html" target="_blank" class="logo">Forsa Plus</a>
-        </div>
 
-        <nav>
-            <ul>
-                <li><a href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Consultations</a></li>
-                <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i> My offers</a></li>
-                <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> My works</a></li>
-                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contact us</a></li>
-            </ul>
-        </nav>
-        <div class="btn">
-            <a href="#" class="btn-login">Login</a>
-        </div>
-
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Forsa Plus</h1>
-            <p>
-                Embark on your career journey with us! We offer unique opportunities to <br>
-                develop your skills, explore careers that fit your passion, and build a <br>
-                network of professionals in your field. Get started today
-            </p>
-            <h2 class="pra">Invest your experience and start a new journey</h2>
-            <div class="buttons">
-                <a href="login.html" target="_blank" class="btn-primary">Login</a>
-                <a href="new.html" target="_blank" class="btn-outline">New account</a>
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Consultations</a></li>
+                    <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i> My offers</a></li>
+                    <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> My works</a></li>
+                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contact us</a></li>
+                </ul>
+            </nav>
+            <div class="btn">
+                <a href="#" class="btn-login">Login</a>
             </div>
-        </div>
-    </section>
+
+        </header>
+
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Forsa Plus</h1>
+                <p>
+                    Embark on your career journey with us! We offer unique opportunities to <br>
+                    develop your skills, explore careers that fit your passion, and build a <br>
+                    network of professionals in your field. Get started today
+                </p>
+                <h2 class="pra">Invest your experience and start a new journey</h2>
+                <div class="buttons">
+                    <a href="login.html" target="_blank" class="btn-primary">Login</a>
+                    <a href="new.html" target="_blank" class="btn-outline">New account</a>
+                </div>
+            </div>
+        </section>
+    </div>
+
 
     <script src="JS/main.js"></script>
     <script src="JS/index.js"></script>
