--- a/login.html
+++ b/login.html
@@ -10,69 +10,72 @@
 </head>
 
 <body>
-    
+
     <div id="preloader">
         <span class="index"></span>
     </div>
 
-    <header class="navbar">
-        <div class="n">
-            <div class="dots">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="logo">Forsa Plus</div>
-        </div>
-
-        <nav>
-            <ul>
-                <li><a href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Consultations</a></li>
-                <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i> My offers</a></li>
-                <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> My works</a></li>
-                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contact us</a></li>
-            </ul>
-        </nav>
-        <div class="btn">
-            <a href="#" class="btn-login">Login</a>
-        </div>
-
-    </header>
-
-    <section class="login-section">
-        <div class="back">
-            <div class="left">
-                <div class="dots1">
+    <div class="main-content" style="display: none;">
+        <header class="navbar">
+            <div class="n">
+                <div class="dots">
                     <span></span>
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
-                <div class="dots2">
-                    <h1>Forsa Plus</h1>
-                </div>
-
+                <div class="logo">Forsa Plus</div>
             </div>
 
-            <div class="l"></div>
+            <nav>
+                <ul>
+                    <li><a href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Consultations</a></li>
+                    <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i> My offers</a></li>
+                    <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i> My works</a></li>
+                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Contact us</a></li>
+                </ul>
+            </nav>
+            <div class="btn">
+                <a href="#" class="btn-login">Login</a>
+            </div>
 
-            <div class="right">
-                <div class="login-box">
-                    <h2>Login</h2>
-                    <form>
-                        <h3>e-mail</h3>
-                        <input type="email" placeholder="" required>
-                        <h3>password</h3>
-                        <input type="password" placeholder="" required>
-                        <button type="submit">Login</button>
-                        <a href="#">Forgot your password?</a>
-                    </form>
+        </header>
+
+        <section class="login-section">
+            <div class="back">
+                <div class="left">
+                    <div class="dots1">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="dots2">
+                        <h1>Forsa Plus</h1>
+                    </div>
+
+                </div>
+
+                <div class="l"></div>
+
+                <div class="right">
+                    <div class="login-box">
+                        <h2>Login</h2>
+                        <form>
+                            <h3>e-mail</h3>
+                            <input type="email" placeholder="" required>
+                            <h3>password</h3>
+                            <input type="password" placeholder="" required>
+                            <button type="submit">Login</button>
+                            <a href="#">Forgot your password?</a>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </section>
+        </section>
+    </div>
+
 
     <script src="JS/main.js"></script>
     <script src="JS/index.js"></script>
