--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     </div>
 
 
-    <script src="JS/main.js"></script>
-    <script src="JS/index.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
