--- a/new.html
+++ b/new.html
@@ -76,8 +76,8 @@
         </section>
     </div>
 
-    <script src="JS/main.js"></script>
-    <script src="JS/index.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
